End to end pipeline works, yay